--- a/app/res/layout/tableRow.xml
+++ b/app/res/layout/tableRow.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -8,5 +8,23 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/weight" android:layout_gravity="center_horizontal|top" android:text="test"/>
-</LinearLayout>
+            android:id="@+id/textViewWeight" android:layout_gravity="center_horizontal|top" android:text="weight"
+            android:layout_alignParentLeft="true" android:layout_marginLeft="0dp" android:layout_alignParentTop="true"
+            android:layout_marginTop="0dp"/>
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="27dp"
+            android:text="@string/DelButtonCaption"
+            android:id="@+id/deleteButton" android:layout_toLeftOf="@+id/textViewDate"
+            android:minHeight="10px" android:maxHeight="10px" android:longClickable="false" android:height="18px"
+            android:textSize="6dp"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Date"
+            android:id="@+id/textViewDate" android:layout_gravity="center_horizontal|top"
+            android:layout_alignParentLeft="false" android:layout_marginLeft="20dp" android:layout_alignParentTop="true"
+            android:layout_marginTop="0dp" android:layout_alignParentBottom="false"
+            android:layout_alignWithParentIfMissing="false" android:layout_alignParentRight="true"
+            android:singleLine="false"/>
+</RelativeLayout>
