- add russian localization

--- a/app/src/main/res/layout/v_custom_item.xml
+++ b/app/src/main/res/layout/v_custom_item.xml
@@ -23,6 +23,7 @@
         tools:text="8.00"/>
     <TextView
         android:paddingTop="26dp"
+        android:layout_marginBottom="-20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/label_date"/>
@@ -35,7 +36,7 @@
     </DatePicker>
 
     <TextView
-        android:paddingTop="8dp"
+        android:layout_marginTop="-16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/label_time"/>
