--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<dimen name="delButtonHeight">10dp</dimen></resources>
+    <dimen name="delButtonHeight">10dp</dimen>
+
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="status_bar_top_padding">0dp</dimen>
+
+    <dimen name="nav_drawer_width">300dp</dimen>
+
+    <dimen name="separator_thickness">0.5dp</dimen>
+    <dimen name="separator_thickness_fat">2dp</dimen>
+
+    <dimen name="text_xxxsmall">12sp</dimen>
+    <dimen name="text_xxsmall">14sp</dimen>
+    <dimen name="text_xsmall">16sp</dimen>
+    <dimen name="text_small">18sp</dimen>
+
+    <dimen name="text_medium">20sp</dimen>
+
+    <dimen name="text_large">22sp</dimen>
+    <dimen name="text_xlarge">24sp</dimen>
+    <dimen name="text_xxlarge">26sp</dimen>
+    <dimen name="text_xxxlarge">28sp</dimen>
+
+    <dimen name="text_huge">30sp</dimen>
+    <dimen name="text_xhuge">36sp</dimen>
+    <dimen name="text_xxhuge">48sp</dimen>
+    <dimen name="text_xxxhuge">52sp</dimen>
+
+    <dimen name="navigation_header_height">145dp</dimen>
+    <dimen name="margin_medium">16dp</dimen>
+    <dimen name="margin_small">8dp</dimen>
+    <dimen name="margin_xsmall">4dp</dimen>
+    <dimen name="margin_large">24dp</dimen>
+    <dimen name="margin_xlarge">32dp</dimen>
+    <dimen name="toolbar_height">56dp</dimen>
+    <dimen name="auth_controls_space">20dp</dimen>
+    <dimen name="userprofile_bottom_offset">86dp</dimen>
+    <dimen name="hacky_favorites_height">1000dp</dimen>
+    <dimen name="favorites_ava_width">90dp</dimen>
+
+    <dimen name="table_space_side">18dp</dimen>
+    <!--
+        <dimen name="chat_li_separator_left_padding">72dp</dimen>  //for round ava
+    -->
+
+    <dimen name="chat_li_separator_left_padding">0dp</dimen>
+    <dimen name="photo_edit_width">110dp</dimen>
+
+    <dimen name="margin_userprofile_properties_edit">40dp</dimen>
+
+    <dimen name="people_card_vert_margin">0dp</dimen>
+    <dimen name="people_card_horiz_margin">1dp</dimen>
+
+</resources>
