- working on profile

--- a/app/src/main/res/layout/profile_f.xml
+++ b/app/src/main/res/layout/profile_f.xml
@@ -1,13 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-<TextView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:text="PROFILE TODO"/>
+    android:orientation="vertical">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/toolbar_height">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingTop="@dimen/margin_large">
+
+            <ViewStub
+                android:id="@+id/gender_stub"
+                style="@style/ProfileSpinnerItem" />
+
+            <ViewStub
+                android:id="@+id/age_stub"
+                style="@style/ProfileSpinnerItem" />
+
+            <ViewStub
+                android:id="@+id/stub_height"
+                style="@style/ProfileSpinnerItem" />
+
+            <ViewStub
+                android:id="@+id/stub_bmi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout="@layout/profile_li_textview" />
+
+            <ViewStub
+                android:id="@+id/stub_weight"
+                style="@style/ProfileSpinnerItem" />
+
+        </LinearLayout>
+
+    </ScrollView>
 
     <include layout="@layout/toolbar_base" />
 </FrameLayout>
