--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,10 @@
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="ProfileSpinnerItem">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout">@layout/profile_li_spinner</item>
+    </style>
+
 </resources>
