--- a/app/src/main/res/layout/spinner_item_right.xml
+++ b/app/src/main/res/layout/spinner_item_right.xml
@@ -4,6 +4,7 @@
     android:singleLine="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="right"
     android:ellipsize="marquee"
     android:textAlignment="inherit"
     android:textSize="@dimen/text_small"
