--- a/app/src/main/res/layout/profile_li_textview.xml
+++ b/app/src/main/res/layout/profile_li_textview.xml
@@ -16,6 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:textColor="@color/text_primary_blue"
         android:maxWidth="150dp"
         tools:text="Test Label" />
 
@@ -25,7 +26,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="18dp"
-        android:layout_marginRight="4dp"
+        android:layout_marginRight="8dp"
         android:layout_weight="1"
         android:gravity="right|center_vertical"
         tools:text="Women"
