--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
         <item name="windowActionModeOverlay">true</item>
+        <item name="android:windowBackground">@color/white_1</item>
         <item name="android:windowTranslucentStatus" tools:ignore="NewApi">
             true
         </item>
