--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,19 @@
         <item name="android:layout">@layout/profile_li_spinner</item>
     </style>
 
+    <style name="MealsTable.Meal" parent="TextAppearance.Default.Regular.XXSmall">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_weight">1</item>
+    </style>
+
+    <style name="MealTable.Header" parent="TextAppearance.Default.Regular.XXSmall">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/text_dim</item>
+    </style>
+
 </resources>
