--- a/app/src/main/res/layout/meals_li_footer.xml
+++ b/app/src/main/res/layout/meals_li_footer.xml
@@ -6,31 +6,42 @@
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:paddingLeft="@dimen/margin_large"
-    android:paddingRight="@dimen/margin_large">
+    android:paddingRight="@dimen/margin_large"
+    android:background="?attr/selectableItemBackground">
 
     <Space
         android:layout_width="0dp"
-        android:layout_height="@dimen/header_height"
+        android:layout_height="@dimen/meal_height"
         tools:ignore="Suspicious0dp" />
 
     <TextView
-        style="@style/MealTable.Header"
-        android:gravity="left"
-        android:text="@string/meal" />
+        android:id="@+id/totals"
+        style="@style/MealsTable.Meal"
+        android:gravity="right"
+        android:textStyle="bold"
+        android:text="@string/totals" />
 
     <TextView
-        style="@style/MealTable.Header"
-        android:text="@string/proteins" />
+        android:id="@+id/proteins"
+        style="@style/MealsTable.Meal"
+        android:gravity="center"
+        tools:text="1110/2222" />
 
     <TextView
-        style="@style/MealTable.Header"
-        android:text="@string/fats" />
+        android:id="@+id/fats"
+        style="@style/MealsTable.Meal"
+        android:gravity="center"
+        tools:text="1110/222" />
 
     <TextView
-        style="@style/MealTable.Header"
-        android:text="@string/carbs" />
+        android:id="@+id/carbs"
+        style="@style/MealsTable.Meal"
+        android:gravity="center"
+        tools:text="2233/222" />
 
     <TextView
-        style="@style/MealTable.Header"
-        android:text="@string/calories" />
+        android:id="@+id/calories"
+        style="@style/MealsTable.Meal"
+        android:gravity="center"
+        tools:text="233/222" />
 </LinearLayout>
