--- a/app/src/main/res/layout/mealslist_f.xml
+++ b/app/src/main/res/layout/mealslist_f.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+        android:id="@+id/meals_recycler_view"
         android:layout_marginTop="@dimen/toolbar_height"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
