--- a/app/src/main/res/layout/meals_li_footer.xml
+++ b/app/src/main/res/layout/meals_li_footer.xml
@@ -17,7 +17,7 @@
     <TextView
         android:id="@+id/totals"
         style="@style/MealsTable.Meal"
-        android:gravity="right"
+        android:gravity="center"
         android:textStyle="bold"
         android:text="@string/totals" />
 
