--- a/app/src/main/res/layout/profile_f.xml
+++ b/app/src/main/res/layout/profile_f.xml
@@ -47,4 +47,6 @@
     </ScrollView>
 
     <include layout="@layout/toolbar_base" />
+
+    <include layout="@layout/toolbar_shadow" />
 </FrameLayout>
