--- a/app/src/main/res/layout/mealslist_f.xml
+++ b/app/src/main/res/layout/mealslist_f.xml
@@ -10,4 +10,6 @@
         android:layout_height="match_parent"/>
 
     <include layout="@layout/toolbar_base" />
+
+    <include layout="@layout/toolbar_shadow" />
 </FrameLayout>
