--- a/app/src/main/res/layout/meal_li_new_product.xml
+++ b/app/src/main/res/layout/meal_li_new_product.xml
@@ -16,7 +16,7 @@
 
     <TextView
         android:id="@+id/meal"
-        style="@style/MealsTable.Meal"
+        style="@style/Table.TextView"
         android:layout_marginLeft="@dimen/margin_medium"
         android:gravity="left"
         android:textColor="@color/text_primary_blue"
