--- a/app/src/main/res/layout/meals_li_footer.xml
+++ b/app/src/main/res/layout/meals_li_footer.xml
@@ -16,32 +16,32 @@
 
     <TextView
         android:id="@+id/totals"
-        style="@style/MealsTable.Meal"
+        style="@style/Table.TextView"
         android:gravity="center"
         android:textStyle="bold"
         android:text="@string/totals" />
 
     <TextView
         android:id="@+id/proteins"
-        style="@style/MealsTable.Meal"
+        style="@style/Table.TextView"
         android:gravity="center"
         tools:text="1110/2222" />
 
     <TextView
         android:id="@+id/fats"
-        style="@style/MealsTable.Meal"
+        style="@style/Table.TextView"
         android:gravity="center"
         tools:text="1110/222" />
 
     <TextView
         android:id="@+id/carbs"
-        style="@style/MealsTable.Meal"
+        style="@style/Table.TextView"
         android:gravity="center"
         tools:text="2233/222" />
 
     <TextView
         android:id="@+id/calories"
-        style="@style/MealsTable.Meal"
+        style="@style/Table.TextView"
         android:gravity="center"
         tools:text="233/222" />
 </LinearLayout>
