--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,7 +37,7 @@
         <item name="android:textColor">@color/text_dim</item>
     </style>
 
-    <style name="Table.TextView.EditText">
+    <style name="Table.TextView.EditTextNumber">
         <item name="android:background">@color/transparent</item>
         <item name="android:layout_height">40dp</item>
         <item name="android:gravity">center</item>
