--- a/app/src/main/res/layout/meal_li_header.xml
+++ b/app/src/main/res/layout/meal_li_header.xml
@@ -6,7 +6,7 @@
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:paddingLeft="@dimen/margin_large"
-    android:paddingRight="@dimen/margin_large">
+    android:paddingRight="@dimen/margin_small">
 
     <Space
         android:layout_width="0dp"
@@ -37,4 +37,9 @@
     <TextView
         style="@style/MealTable.Header"
         android:text="@string/calories" />
+
+    <Space
+        android:id="@+id/delete_button"
+        android:layout_width="40dp"
+        android:layout_height="40dp" />
 </LinearLayout>
