- fix edit text input issues

--- a/app/src/main/res/layout/meal_li_product.xml
+++ b/app/src/main/res/layout/meal_li_product.xml
@@ -16,34 +16,34 @@
 
     <EditText
         android:id="@+id/product"
-        style="@style/Table.TextView.EditTextNumber"
+        style="@style/Table.TextView.EditText"
         android:gravity="left|center_vertical"
-        android:inputType="text"
+        android:inputType="text|textCapWords"
         tools:text="Dinner" />
 
     <EditText
         android:id="@+id/proteins"
-        style="@style/Table.TextView.EditTextNumber"
+        style="@style/Table.TextView.EditText.Digits"
         tools:text="22" />
 
     <EditText
         android:id="@+id/fats"
-        style="@style/Table.TextView.EditTextNumber"
+        style="@style/Table.TextView.EditText.Digits"
         tools:text="66" />
 
     <EditText
         android:id="@+id/carbs"
-        style="@style/Table.TextView.EditTextNumber"
+        style="@style/Table.TextView.EditText.Digits"
         tools:text="44" />
 
     <EditText
         android:id="@+id/weight"
-        style="@style/Table.TextView.EditTextNumber"
+        style="@style/Table.TextView.EditText.Digits"
         tools:text="40" />
 
     <TextView
         android:id="@+id/calories"
-        style="@style/Table.TextView"
+        style="@style/Table.TextView.EditText.Digits"
         tools:text="500" />
 
     <ImageButton
