--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,6 +27,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_weight">1</item>
+        <item name="android:selectAllOnFocus">true</item>
     </style>
 
     <style name="MealTable.Header" parent="TextAppearance.Default.Regular.XXSmall">
@@ -37,12 +38,16 @@
         <item name="android:textColor">@color/text_dim</item>
     </style>
 
-    <style name="Table.TextView.EditTextNumber">
+    <style name="Table.TextView.EditText">
         <item name="android:background">@color/transparent</item>
         <item name="android:layout_height">40dp</item>
         <item name="android:gravity">center</item>
         <item name="android:inputType">number|numberDecimal|numberSigned</item>
         <item name="android:imeOptions">flagNoExtractUi</item>
+    </style>
+
+    <style name="Table.TextView.EditText.Digits">
+        <item name="android:digits">0123456789.</item>
     </style>
 
 </resources>
