--- a/app/src/main/res/layout/meal_li_product.xml
+++ b/app/src/main/res/layout/meal_li_product.xml
@@ -18,7 +18,7 @@
         android:id="@+id/product"
         style="@style/Table.TextView.EditText"
         android:gravity="left|center_vertical"
-        android:inputType="text|textCapWords"
+        android:inputType="text|textCapWords|textPhonetic"
         tools:text="Dinner" />
 
     <EditText
