--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,7 +43,8 @@
         <item name="android:layout_height">40dp</item>
         <item name="android:gravity">center</item>
         <item name="android:inputType">number|numberDecimal|numberSigned</item>
-        <item name="android:imeOptions">flagNoExtractUi</item>
+        <item name="android:imeOptions">flagNoExtractUi|actionNext</item>
+        <item name="android:singleLine">true</item>
     </style>
 
     <style name="Table.TextView.EditText.Digits">
