- rework imba MealSummary update logic

--- a/app/src/main/res/layout/meal_li_product.xml
+++ b/app/src/main/res/layout/meal_li_product.xml
@@ -43,7 +43,7 @@
 
     <TextView
         android:id="@+id/calories"
-        style="@style/Table.TextView.EditText.Digits"
+        style="@style/Table.TextView"
         tools:text="500" />
 
     <ImageButton
