- fix text sizes

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,7 +22,7 @@
         <item name="android:layout">@layout/profile_li_spinner</item>
     </style>
 
-    <style name="Table.TextView" parent="TextAppearance.Default.Regular.XXSmall">
+    <style name="Table.TextView" parent="TextAppearance.Default.Regular.XSmall">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center</item>
@@ -30,7 +30,7 @@
 
     </style>
 
-    <style name="MealTable.Header" parent="TextAppearance.Default.Regular.XXSmall">
+    <style name="MealTable.Header" parent="TextAppearance.Default.Regular.XSmall">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
