- add delete alert; - hide toolbar

--- a/app/src/main/res/layout/meal_li_product.xml
+++ b/app/src/main/res/layout/meal_li_product.xml
@@ -39,6 +39,7 @@
     <EditText
         android:id="@+id/weight"
         style="@style/Table.TextView.EditText.Digits"
+        android:imeOptions="flagNoExtractUi|actionDone"
         tools:text="40" />
 
     <TextView
