--- a/app/src/main/res/layout/meal_f.xml
+++ b/app/src/main/res/layout/meal_f.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/meal_recycler_view"
-        android:layout_marginTop="@dimen/toolbar_height"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <include layout="@layout/toolbar_base" />
+        <include layout="@layout/toolbar_base" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/meal_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
 
     <include layout="@layout/toolbar_shadow" />
 </FrameLayout>
